fixing alignment with body-4

--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ a {
 
 .body-four {
     height: 300px;
-    padding: 16px 300px;
+    padding: 16px 256px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -156,9 +156,12 @@ a {
 
 .b4-container {
     background: #3882f6;
-    width: 100%;
-    padding: 32px 16px;
+    padding: 36px 128px;
+    width: 80%;
     border-radius: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .b4-title {
